# voxkey

./: .gitignore  Cargo.toml  INSTALL.md  LICENSE  README.md  config.example.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  run.sh  voice_input_daemon.py
.github/workflows/: build-dmg.yml  build-windows.yml  ci.yml  publish-models.yml
.reuse/: dep5
back-end/: ruff.toml
back-end/asr-service/: requirements.txt
back-end/voice-daemon/: voice_input_daemon.py
crates/voxkey-core/: Cargo.toml
docs/: ARCHITECTURE.md  DEVELOPMENT.md  ROADMAP.md  import-qwen3-asr-model.md  qwen-voice-input-arch-niri.md  qwen3-asr-gguf-arch-linux.md  voxkey-arch-niri.md  windows-local-llm-backend.md
fcitx-addon/: CMakeLists.txt  README.md  install-user.sh  qwenvoiceinput.conf  qwenvoiceinput.cpp  voxkeyinput.conf
front-end/desktop-ui/: index.html  package.json  run_build.ps1  vite.config.ts
front-end/desktop-ui/src-tauri/: Cargo.toml  Info.plist  build.rs  entitlements.plist  tauri.conf.json  wix-locale.wxl
front-end/desktop-ui/src-tauri/capabilities/: default.json
front-end/desktop-ui/src-tauri/icons/: icon.icns
front-end/desktop-ui/src-tauri/permissions/autogenerated/: get_asr_service_status.toml  get_asr_token.toml  list_runtime_candidates.toml  model_status.toml  save_asr_settings.toml  save_selected_runtime.toml  start_asr_service.toml  stop_asr_service.toml
front-end/desktop-ui/src-tauri/src/: lib.rs  main.rs
services/asr-service/: README.md  main.py
systemd/user/: qwen-voice-input.service  voxkey.service
tests/: test_voice_input_daemon.py
(+56 files in other folders)
